deployment/hello-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: tlitovsk/kubernetes-nodejs-helloworld:ver1
        imagePullPolicy: Always
